--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,8 @@ a{
 }
 .list-inline>li{
 	display:inline-block;
+	*display:inline;
+	*zoom:1;   
 	padding-left:10px;
 }
 dl{
@@ -107,6 +109,7 @@ dl{
 	position:fixed;
 	z-index:1000;
 	width:100%;
+	min-height:104px;
 	background:#2c3e50;
 }
 #nav .content{
@@ -157,6 +160,10 @@ dl{
 	}
 }
 /*个人经历*/
+#experienceTar{
+	height:104px;
+	margin-top:-104px;
+}
 #experience{
 	background:#7f8c8d;
 }
@@ -186,6 +193,10 @@ dl{
 	margin:4px 0px;
 }
 /*IT技能*/
+#skillsTar{
+	height:104px;
+	margin-top:-104px;
+}
 #skills{
 	background:#16a085;
 }
